--- a/src/app/update-notification-settings-modal/update-notification-settings-modal.component.scss
+++ b/src/app/update-notification-settings-modal/update-notification-settings-modal.component.scss
@@ -2,18 +2,10 @@
   color: #474747;
   font-size: 1.1rem;
 }
-
-.checkbox-lg .custom-control-label::before,
-.checkbox-lg .custom-control-label::after {
-  top: .6rem;
-  width: 1.35rem;
-  height: 1.35rem;
-}
-
-.checkbox-lg .custom-control-label {
-  padding-top: 8px;
-  padding-left: 5px;
-  font-size: 1.1rem;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 input[type=number] {
   -moz-appearance: textfield;
