--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -29,7 +29,7 @@
       </td>
     </tr>
   <tr *ngFor="let account of topAccounts; trackBy: trackBy">
-    <td class="ellipsis">{{account.name ? account.name : account.payoutAddress}}</td>
+    <td class="ellipsis"><a class="farmer-page-link" routerLink="/farmer/{{account.poolPublicKey}}">{{account.name ? account.name : account.payoutAddress}}</a></td>
     <td class="no-wrap">{{account.pendingRounded}}<span *ngIf="account.pendingRounded === 0 && account.collateral"><span style="font-size: 12.8px"> +{{account.collateralRounded}}</span></span> {{poolConfig.ticker}}</td>
     <td class="no-wrap">{{getFormattedCapacity(account.ec)}} <span style="font-size: 12.8px">({{getEcShare(account)}} %)</span></td>
   </tr>
