Add won block remarks

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,12 @@ span[blue] {
 span[red] {
   background-color: $color-red;
 }
+.background-color-light-green {
+  background-color: $color-light-green;
+}
+.background-color-orange {
+  background-color: $color-orange;
+}
 .color-green {
   color: $color-green;
 }
