--- a/src/app/farmer-won-blocks/farmer-won-blocks.component.html
+++ b/src/app/farmer-won-blocks/farmer-won-blocks.component.html
@@ -12,6 +12,7 @@
           </th>
           <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.height')}}</th>
           <th scope="col">{{snippetService.getSnippet('blocks-won-component.header.effort')}}</th>
+          <th scope="col">Remarks</th>
         </tr>
       </thead>
       <tbody>
@@ -30,6 +31,18 @@
           <td *ngIf="poolConfig.blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
           <td *ngIf="!poolConfig.blockExplorerBlockUrlTemplate">{{block.height}}</td>
           <td><span [class]="getEffortColor(block)">{{getBlockEffort(block)}}</span></td>
+          <td *ngIf="block.remarks === undefined || block.remarks.length === 0">
+            <span class="badge badge-pill remark-pill badge-success background-color-light-green">OK</span>
+          </td>
+          <td *ngIf="block.remarks !== undefined && block.remarks.length > 0">
+            <span *ngFor="let remark of block.remarks; let last = last;">
+              <span class="badge badge-pill remark-pill"
+                    [ngClass]="getRemarkClasses(remark)"
+                    ngbTooltip="{{getRemarkTooltip(remark)}}"
+              >{{getRemarkDetail(remark)}}</span>
+              <span *ngIf="!last">&nbsp;</span>
+            </span>
+          </td>
         </tr>
       </tbody>
     </table>
